Fix placement of conditional rendering NavLinks so the navlinks appear aligned with home link in collapsed view

--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -8,8 +8,7 @@
     padding: 10px;
 }
 
-.NavText:hover,
-.logOutStyle:hover {
+.NavText:hover {
     color: #8EAEC4 !important;
     text-decoration: none;
 }
@@ -21,8 +20,4 @@
 
 .Active:hover {
     text-decoration: none;
-}
-
-.logOutStyle {
-    color: #336A86;
 }
